# 1.2.0

* Throw more informative error when word/document.xml cannot be found.

* Generate messages of type "error" instead of "warning" when image conversion
  throws an exception.

# 1.1.0

* Add support for comments.

# 1.0.4

* Add support for w:sdt elements. This allows the bodies of content controls,
  such as bibliographies, to be converted.

* Avoid stack overflows when elements have many children.

# 1.0.3

* Actually add support for table cells spanning multiple rows.

# 1.0.2

* Add support for table cells spanning multiple rows.

# 1.0.1

* Add support for table cells spanning multiple columns.

# 1.0.0

* Remove deprecated convertUnderline option.

* Officially support ID prefixes.

* Generated IDs no longer insert a hyphen after the ID prefix.

* The default ID prefix is now the empty string rather than a random number
  followed by a hyphen.

* Rename mammoth.images.inline to mammoth.images.imgElement to better reflect
  its behaviour.

# 0.3.33

* Improve collapsing of elements when there are empty elements.

# 0.3.32

* Allow bold and italic style mappings to be configured.

# 0.3.31

* Handle references to missing styles when reading documents.

# 0.3.30

* Improve support for lists made in LibreOffice. Specifically, this changes the
  default style mapping for paragraphs with a style of "Normal" to have the
  lowest precedence.

* Replace nomnom with argparse for CLI argument parsing. Usage should be the
  same, but unknown arguments will now cause an exit with failure rather than
  being ignored.

# 0.3.29

* Always use mc:Fallback when reading mc:AlternateContent elements.

# 0.3.28

* Avoid inserting newlines around inline elements when pretty-printing HTML.

* CLI: print warnings to stderr.

* Read v:imagedata with r:id attribute.

* Read children of v:roundrect.

* Ignore office-word:wrap, v:shadow and v:shapetype.

# 0.3.27

* Fix recursive collapsing of elements.

# 0.3.26
