@@ -316,8 +316,13 @@ function BodyReader(options) {
     }
     
     function readBlip(element, blip) {
-        var altText = element.first("wp:docPr").attributes.descr;
+        var properties = element.first("wp:docPr").attributes;
+        var altText = isBlank(properties.descr) ? properties.title : properties.descr;
         return readImage(findBlipImageFile(blip), altText);
+    }
+    
+    function isBlank(value) {
+        return /^\s*$/.test(value);
     }
     
     function findBlipImageFile(blip) {
